IOEngine getRange issue #190